--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   api:
     build: .
@@ -13,6 +15,8 @@ services:
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     networks:
       - app-network
+    environment:
+      - PYTHONDONTWRITEBYTECODE=1
 
   db:
     image: mysql:8.0
