--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,49 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Distribution / packaging
-dist/
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
 
 # Virtual Environment
-venv/
-env/
 .env
+.venv
+env/
+venv/
+ENV/
 
 # IDE
 .idea/
 .vscode/
+*.swp
+*.swo
+
+# Poetry
+poetry.lock
 
 # Logs
 *.log
+
+# Database
+*.db
+*.sqlite3
+
+# Docker
+.docker/
 
 # Local development settings
 .env.local
