--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,12 @@ PROJECT_NAME=FastAPI Project
 
 # CORS
 BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"] 
+
+# Mail
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_FROM=your-email@gmail.com
+MAIL_FROM_NAME=Your App Name
+
+# Frontend
+FRONTEND_URL=http://your-frontend-url
