--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pydantic-settings = "^2.1.0"
 python-dotenv = "^1.0.1"
 email-validator = "^2.1.0.post1"
 python-multipart = "^0.0.9"
+fastapi-mail = "^1.4.1"
+jinja2 = "^3.1.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
