--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 
 services:
-  api:
+  app:
     build: .
-    container_name: fastapi_api
+    container_name: fastapi_app
     ports:
       - "8000:8000"
     volumes:
@@ -11,12 +11,68 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
+      redis:
+        condition: service_healthy
+      db:
+        condition: service_healthy
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     networks:
       - app-network
     environment:
       - PYTHONDONTWRITEBYTECODE=1
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+  worker:
+    build: .
+    container_name: fastapi_worker
+    command: celery -A app.core.celery_app worker -Q email_queue -l info
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    depends_on:
+      redis:
+        condition: service_healthy
+      app:
+        condition: service_started
+    networks:
+      - app-network
+
+  beat:
+    build: .
+    container_name: fastapi_beat
+    command: celery -A app.core.celery_app beat -l info
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    depends_on:
+      redis:
+        condition: service_healthy
+      app:
+        condition: service_started
+    networks:
+      - app-network
+
+  redis:
+    image: redis:latest
+    container_name: fastapi_redis
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   db:
     image: mysql:8.0
@@ -35,6 +91,11 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
 networks:
   app-network:
