--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ email-validator = "^2.1.0.post1"
 python-multipart = "^0.0.9"
 fastapi-mail = "^1.4.1"
 jinja2 = "^3.1.3"
+celery = "^5.3.6"
+redis = "^5.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
