--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,8 @@ MAIL_FROM_NAME=Your App Name
 
 # Frontend
 FRONTEND_URL=http://your-frontend-url
+
+
+# Celery
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
