--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: fastapi_app
     ports:
       - "8000:8000"
+      - "5678:5678"
     volumes:
       - .:/app
     env_file:
@@ -15,7 +16,7 @@ services:
         condition: service_healthy
       db:
         condition: service_healthy
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: python -m debugpy --listen 0.0.0.0:5678 --wait-for-client -m uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     networks:
       - app-network
     environment:
