--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ flake8 = "^7.0.0"
 mypy = "^1.8.0"
 pytest = "^8.0.0"
 httpx = "^0.26.0"
+debugpy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
