--- a/.env.test
+++ b/.env.test
@@ -1,33 +1,32 @@
 # Database
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=app
-MYSQL_USER=app
-MYSQL_PASSWORD=app
+MYSQL_DATABASE=test_fastapi_db
+MYSQL_USER=root
+MYSQL_PASSWORD=root
 MYSQL_HOST=db
 MYSQL_PORT=3306
 DATABASE_URL=mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
 
 # Security
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=test-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # API
 API_STR=/api
-PROJECT_NAME=FastAPI Project
+PROJECT_NAME=FastAPI Project Test
 
 # CORS
 BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"] 
 
 # Mail
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-password
-MAIL_FROM=your-email@gmail.com
-MAIL_FROM_NAME=Your App Name
+MAIL_USERNAME=tranhieptvh@gmail.com
+MAIL_PASSWORD=nnnk pbab vsfo yaon
+MAIL_FROM=tranhieptvh@gmail.com
+MAIL_FROM_NAME=Base FastAPI Test
 
 # Frontend
-FRONTEND_URL=http://your-frontend-url
-
+FRONTEND_URL=http://localhost:3000
 
 # Celery
 CELERY_BROKER_URL=redis://redis:6379/0
