feat(english-learning-app): init app

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,5 @@ FRONTEND_URL=http://your-frontend-url
 # Celery
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+GEMINI_API_KEY=
