--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ fastapi-mail = "^1.4.1"
 jinja2 = "^3.1.3"
 celery = "^5.3.6"
 redis = "^5.0.1"
+langchain = "^0.1.0"
+langchain-google-genai = "^0.0.8"
+langgraph = "^0.0.20"
+google-generativeai = "^0.3.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
